# avena-rs

./: .gitignore  OK.md  README.md  TODO.md  natsKeys.md  overview.tex  package-lock.json  package.json  setup.sh  stop.sh  tailwind.config.js
.github/workflows/: pages.yml
camera_code/: README.md  annotations.xml  car_only.py  car_rt.py  car_rt_not_yolo.py  lane.py  sys_monitor.py  wheels_crossing.py  yolo26.py
dashboard/: .gitignore  LABJACK_MANAGEMENT.md  README.md  cleanup_nats.sh  nats.conf  natsKeys.md  package.json  pnpm-lock.yaml  setup_nats.sh  setup_nats_data.sh  tailwind.config.js
dashboard/src/: app.css  app.html
docs/: edge-nats-prometheus.md
ljstreamM_data/: requirements.txt  validate_signals.py  validation_suite.json
paper-avena/: IEEE-conference-template-062824.tex  overview.tex
paper-avena/ieee/: avena_refs.bib  conference_101719.aux  conference_101719.bbl  conference_101719.blg  conference_101719.tex
py-scripts/: plot.py
rust-ljm/: .gitignore  Cargo.toml  LICENSE  README.md  archiver.env.json  archiverctl.sh  binctl-common.sh  build.rs  deploy-binary.sh  env-setup.sh  env.example  exporter.env.json  exporterctl.sh  libLabJackM-1.23.4.dylib  plot.py  run.sh  streamer.env.json  streamerctl.sh
rust-ljm/.cargo/: config.toml
rust-ljm/config/: apt.json  macbook.json  sample.json
rust-ljm/examples/: info.rs  read.rs  stop.rs  stream.rs  ws_client.rs
rust-ljm/examples/common/: example_env.rs
rust-ljm/scripts/: start-macbook-rtsp.sh
rust-ljm/src/: calibration.rs  clip_worker.rs  data.fbs  data_generated.rs  exporter.rs  labjack.rs  ljm_mode.rs  main.rs  nats_config.rs  store.rs  subjects.rs  subscriber.rs  video_recorder.rs
schematics/: .gitignore
schematics/Gain_Link/: Gain_Link.kicad_pcb  Gain_Link.kicad_prl  Gain_Link.kicad_pro  Gain_Link.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table  ~_autosave-Gain_Link.kicad_pcb.lck
schematics/LP_breakout/: LP_breakout-B_Cu.gbr  LP_breakout-B_Mask.gbr  LP_breakout-B_Paste.gbr  LP_breakout-B_Silkscreen.gbr  LP_breakout-Edge_Cuts.gbr  LP_breakout-F_Cu.gbr  LP_breakout-F_Mask.gbr  LP_breakout-F_Paste.gbr  LP_breakout-F_Silkscreen.gbr  LP_breakout-job.gbrjob  LP_breakout.kicad_pcb  LP_breakout.kicad_prl  LP_breakout.kicad_pro  LP_breakout.kicad_sch  _autosave-LP_breakout.kicad_prl  fp-info-cache  fp-lib-table
schematics/Mainboard/: Mainboard.kicad_pcb  Mainboard.kicad_prl  Mainboard.kicad_pro  Mainboard.kicad_sch  digital-link.kicad_sch  fp-info-cache  fp-lib-table  mcu.kicad_sch  pcie.kicad_sch  power.kicad_sch  sym-lib-table
schematics/Shunt_Link/: Link_Components.bak  Link_Components.kicad_sym  Shunt-Link.kicad_pcb  Shunt-Link.kicad_prl  Shunt-Link.kicad_pro  Shunt-Link.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table  ~Shunt-Link.kicad_sch.lck
schematics/epc-gain-link/: epc-gain-link.kicad_pcb  epc-gain-link.kicad_pro  epc-gain-link.kicad_sch  inamp.kicad_sch
schematics/sim_test/: sim_test.wbk  (+3 more)
scripts/: README.md  SECURE.md  add_dev.sh  edge_install.sh  finish_add.sh  hub_install.sh  kill_edge.sh  kill_hub.sh  linux_edge_kill.sh  linux_edge_setup.sh  linux_hub_kill.sh  linux_hub_setup.sh  local.sh  mac_edge_kill.sh  mac_edge_setup.sh  pyproject.toml  remove_dev.sh  seed_edge.sh  setup.sh  stop.sh  verify.sh
shared/: alloy.container  config.alloy  edge-box.config.json  labjack-kv.generated.json  nats-exporter.container  nats-leaf.conf  nats-leaf.container  render-edge-config.py
src/: app.css
webapp/: .gitignore  README.md  TAURI_SETUP.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json
webapp/src-tauri/: Cargo.toml  tauri.conf.json
webapp/src-tauri/capabilities/: default.json
webapp/src-tauri/src/: lib.rs  main.rs
webpage/: README.md  index.html  styles.css
(+258 files in other folders)
