[package]
name = "rust-ljm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-nats = "0.42.0"
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["clock", "serde"] }
chrono-tz = "0.10.4"
clap = { version = "4.5.44", features = ["derive"] }
csv = "1.3.1"
flatbuffers = "24.3.25"
futures-util = "0.3.31"
ljmrs = "0.2.2"
notify = "6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47", features = ["full"] }
time = "0.3"
parquet = "56.1.0"
arrow-array = "56.1.0"
arrow-schema = "56.1.0"
uuid = { version = "1.11.0", features = ["v4"] }

[features]
# Default: use static linking (safe & simple)
default = ["staticlib"]

# Optional: enable dynamic linking
dynlink = []

# Optional: static linking (explicit)
staticlib = []

[[bin]]
name = "streamer"
path = "src/main.rs"

[[bin]]
name = "archiver"
path = "src/store.rs"

[[bin]]
name = "subscriber"
path = "src/subscriber.rs"

[[bin]]
name = "exporter"
path = "src/exporter.rs"

