[package]
name = "rust-ljm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-nats = "0.42.0"
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["clock", "serde"] }
chrono-tz = "0.10.4"
clap = { version = "4.5.44", features = ["derive"] }
csv = "1.3.1"
flatbuffers = "24.3.25"
futures-util = "0.3.31"
libloading = "0.8.8"
ljmrs = { version = "0.2.2", default-features = false, features = ["serde", "stream"] }
notify = "6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47", features = ["full"] }
time = "0.3"
parquet = "56.1.0"
arrow-array = "56.1.0"
arrow-schema = "56.1.0"
uuid = { version = "1.11.0", features = ["v4"] }
axum = { version = "0.7.5", features = ["ws", "macros"] }

[features]
# Default: use runtime loading so builds do not depend on platform-specific linker paths.
default = ["dynlink"]

# Optional: enable runtime loading
dynlink = ["ljmrs/dynlink"]

# Optional: compile-time linking
staticlib = ["ljmrs/staticlink"]

[[bin]]
name = "streamer"
path = "src/main.rs"

[[bin]]
name = "archiver"
path = "src/store.rs"

[[bin]]
name = "subscriber"
path = "src/subscriber.rs"

[[bin]]
name = "exporter"
path = "src/exporter.rs"

[dev-dependencies]
tokio-tungstenite = "0.21"
