[package]
name = "avena-dashboard"
version = "0.1.0"
description = "Avena LabJack Data Acquisition Dashboard"
authors = ["anugunj"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "avena_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.4.1", features = [] }
tauri-plugin-opener = "2.4.2"
tauri-plugin-fs = "2.4.2"
tauri-plugin-http = "2.4.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
